--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@types/mocha": "^5.2.5",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
-    "ts-node": "^7.0.1",
     "typescript": "^3.1.6"
   },
   "dependencies": {
@@ -26,6 +25,7 @@
     "@types/node": "^10.12.8",
     "axios": "^0.18.0",
     "minimist": "^1.2.0",
-    "npm": "^6.4.1"
+    "npm": "^6.4.1",
+    "ts-node": "^7.0.1"
   }
 }
