--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
-    "@types/minimist": "^1.2.0",
     "@types/node": "^10.12.8",
     "axios": "^0.18.0",
+    "colors": "^1.3.2",
     "commander": "^2.19.0",
     "npm": "^6.4.1",
     "ts-node": "^7.0.1"
