--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   },
   "dependencies": {
     "@types/node": "^10.12.8",
+    "@types/yamljs": "^0.2.30",
     "axios": "^0.18.0",
     "colors": "^1.3.2",
     "commander": "^2.19.0",
     "npm": "^6.4.1",
-    "ts-node": "^7.0.1"
+    "ts-node": "^7.0.1",
+    "yamljs": "^0.3.0"
   }
 }
