--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
   },
   "dependencies": {
     "@types/cheerio": "^0.22.9",
+    "@types/cli-progress": "^1.8.0",
     "@types/node": "^10.12.8",
     "@types/sqlite3": "^3.1.3",
     "@types/yamljs": "^0.2.30",
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.2",
+    "cli-progress": "^2.1.0",
     "colors": "^1.3.2",
     "commander": "^2.19.0",
     "delay": "^4.1.0",
