--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@types/mocha": "^5.2.5",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
-    "typescript": "^3.1.6",
-    "ts-node": "^7.0.1"
+    "ts-lint": "^4.5.1",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.1.6"
   },
   "dependencies": {
     "@types/cheerio": "^0.22.9",
