--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   "license": "MIT",
   "devDependencies": {
     "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.5",
     "@types/cheerio": "^0.22.9",
     "@types/cli-progress": "^1.8.0",
+    "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.8",
     "@types/sqlite3": "^3.1.3",
     "@types/yamljs": "^0.2.30",
@@ -33,6 +33,7 @@
     "mocha": "^5.2.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
+    "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.1.6"
   },
   "dependencies": {
