--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
     "type": "git",
     "url": "https://github.com/arestivo/splurt.git"
   },
-  "main": "./src/bin/splurt.js",
+  "main": "./build/src/bin/splurt.js",
   "bin": {
-    "splurt": "./src/bin/splurt.js",
-    "splurt-fetch": "./src/bin/splurt-fetch.js",
-    "splurt-citations": "./src/bin/splurt-citations.js",
-    "splurt-exclude": "./src/bin/splurt-exclude.js"
+    "splurt": "./build/src/bin/splurt.js",
+    "splurt-fetch": "./build/src/bin/splurt-fetch.js",
+    "splurt-citations": "./build/src/bin/splurt-citations.js",
+    "splurt-exclude": "./build/src/bin/splurt-exclude.js"
   },
   "scripts": {
     "build": "tsc",
     "prepublishOnly": "tsc",
-    "test": "mocha --require ts-node/register test/**/*.ts"
+    "test": "mocha --require ts-node/register src/test/**/*.ts"
   },
   "keywords": [],
   "author": "André Restivo",
@@ -26,7 +26,7 @@
     "@types/cheerio": "^0.22.9",
     "@types/cli-progress": "^1.8.0",
     "@types/mocha": "^5.2.5",
-    "@types/node": "^10.12.8",
+    "@types/node": "^10.12.9",
     "@types/sqlite3": "^3.1.3",
     "@types/yamljs": "^0.2.30",
     "chai": "^4.2.0",
