--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@types/cli-progress": "^1.8.0",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.9",
-    "@types/sqlite3": "^3.1.3",
     "@types/yamljs": "^0.2.30",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
@@ -46,7 +45,7 @@
     "es6-promise-pool": "^2.5.0",
     "logic-query-parser": "0.0.5",
     "npm": "^6.4.1",
-    "sqlite3": "^4.0.4",
+    "sqlite": "^3.0.0",
     "yamljs": "^0.3.0"
   }
 }
