--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/chai": "^4.1.7",
     "@types/cheerio": "^0.22.9",
     "@types/cli-progress": "^1.8.0",
+    "@types/fast-levenshtein": "0.0.1",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.9",
     "@types/table": "^4.0.5",
@@ -45,9 +46,11 @@
     "commander": "^2.19.0",
     "delay": "^4.1.0",
     "es6-promise-pool": "^2.5.0",
+    "fast-levenshtein": "^2.0.6",
     "html-entities": "^1.2.1",
     "jsonexport": "^2.4.1",
     "logic-query-parser": "0.0.5",
+    "mustache": "^3.0.1",
     "npm": "^6.4.1",
     "sqlite": "^3.0.0",
     "table": "^5.1.0",
