--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "logic-query-parser": "0.0.5",
     "mustache": "^3.0.1",
     "npm": "^6.4.1",
+    "sanitize-filename": "^1.6.3",
     "sqlite": "^3.0.0",
     "table": "^5.1.0",
     "yamljs": "^0.3.0"
